@@ -118,6 +118,7 @@ protected:
 
     void showEvent( QShowEvent * event );
     void closeEvent( QCloseEvent * event );
+    void hideEvent( QHideEvent * event );
 
 private:
 
