@@ -1,5 +1,9 @@
 2013-05-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/debug_message_window.cpp:
+	* src/qt4/debug_message_window.h:
+	- 小ウインドウがすべて自動で閉じられるように修正
+
 	* src/qt4/action_sequence_selector.cpp:
 	- アイテム選択時の自動スクロールを追加
 
